add screenshot to readme

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Neinjarz is a Game similar to Leiro, or worms - but realtime.
 Network play is supported
 
-![screenshot](ss.png)  
+![screenshot](https://github.com/chozabu/Neinjarz/blob/master/ss.png)  
 
 This game is mostly unmaintained - but shold run OK
 
